--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <div class="row justify-content-center">
         <div class="col-md-6">
           <!-- Replace the action URL with your Formspree endpoint -->
-          <form action="https://formspree.io/f/xeoparjes" method="POST" class="shadow p-4 bg-white rounded">
+          <form action="https://formspree.io/f/xeoparje" method="POST" class="shadow p-4 bg-white rounded">
             
             <div class="mb-3">
               <label for="name" class="form-label">Your Name</label>
