--- a/about.html
+++ b/about.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Bootstrap UI Project</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+  .card:hover {
+    transform: scale(1.03);
+    box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+  }
+</style>
 </head>
 <body>
 
@@ -34,7 +41,7 @@
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
-              <h5 class="card-title text-primary">Our Mission</h5>
+              <h5 class="card-title text-primary" data-bs-toggle="tooltip" title="Our main goal">Our Mission</h5>
               <p class="card-text text-muted">Design clear, functional, and responsive user interfaces.</p>
             </div>
           </div>
@@ -42,7 +49,7 @@
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
-              <h5 class="card-title text-primary">Our Vision</h5>
+             <h5 class="card-title text-primary" data-bs-toggle="tooltip" title="Our long-term vision">Our Vision</h5>
               <p class="card-text text-muted">Combine creativity with coding for modern web design.</p>
             </div>
           </div>
@@ -50,7 +57,7 @@
         <div class="col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
-              <h5 class="card-title text-primary">Our Values</h5>
+              <h5 class="card-title text-primary" data-bs-toggle="tooltip" title="What we value most">Our Values</h5>
               <p class="card-text text-muted">Clean code, accessibility, and continuous learning.</p>
             </div>
           </div>
@@ -64,5 +71,9 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+  const tooltipList = [...tooltipTriggerList].map(el => new bootstrap.Tooltip(el));
+</script>
 </body>
 </html>
